--- a/conferences/libreplanet/2018.mdwn
+++ b/conferences/libreplanet/2018.mdwn
@@ -1,3 +1,7 @@
+https://media.libreplanet.org/u/libreplanet/m/diversity-in-free-software-no-longer-at-square-one/ was good and slides are similar to the ones at https://gitlab.com/marinaz/presentations/blob/master/Diversity_in_Open_Source_OSS_2017.pdf and sketchnotes are available at https://twitter.com/princi_ya/status/977933790927577088
+
+https://media.libreplanet.org/u/libreplanet/m/exposing-hidden-surveillance-in-mobile-apps/ was an interesting talk with a focus on Android. There was an etherpad during the talk and some browser plugins were mentioned that can help detect apps that engage in surveillance. Checks are being added to F-Droid. An Android app is in development.
+
 https://media.libreplanet.org/u/libreplanet/m/a-newcomer-s-perspective-on-patches-for-the-free-software-movement/
 https://media.libreplanet.org/u/libreplanet/m/a-usability-study-of-the-gpl/
 https://media.libreplanet.org/u/libreplanet/m/a-wee-server-for-the-home/
@@ -5,10 +9,8 @@ https://media.libreplanet.org/u/libreplanet/m/browsing-the-free-software-commons
 https://media.libreplanet.org/u/libreplanet/m/curated-web-of-trust-keyrings-for-free-software-projects-a-case-study-on-debian-s-experience/
 https://media.libreplanet.org/u/libreplanet/m/defense-through-collaboration-the-use-of-free-software-in-preventing-proprietary-software-based-virus-attacks/
 https://media.libreplanet.org/u/libreplanet/m/device-and-personal-privacy-technology-roundup/
-https://media.libreplanet.org/u/libreplanet/m/diversity-in-free-software-no-longer-at-square-one/
 https://media.libreplanet.org/u/libreplanet/m/engaging-nonprofits-why-free-software-is-essential-to-the-social-good/
 https://media.libreplanet.org/u/libreplanet/m/evolving-government-policies-on-the-procurement-and-production-of-free-software/
-https://media.libreplanet.org/u/libreplanet/m/exposing-hidden-surveillance-in-mobile-apps/
 https://media.libreplanet.org/u/libreplanet/m/freedom-devices-and-health/
 https://media.libreplanet.org/u/libreplanet/m/free-software-as-a-catalyst-for-liberation-social-justice-and-social-medicine/
 https://media.libreplanet.org/u/libreplanet/m/free-software-for-nonprofit-fundraising-and-crowdfunding/
