--- a/conferences/libreplanet/2018.mdwn
+++ b/conferences/libreplanet/2018.mdwn
@@ -1,4 +1,4 @@
-https://media.libreplanet.org/u/libreplanet/m/sharing-strategies-for-welcoming-newcomers-into-floss-projects-first-timers-only-list-moderation-and-more/ is about making it easier for people to contribute to open source.
+https://media.libreplanet.org/u/libreplanet/m/sharing-strategies-for-welcoming-newcomers-into-floss-projects-first-timers-only-list-moderation-and-more/ is about making it easier for people to contribute to open source. The talk is sort of a walk through of https://publiclab.org/wiki/software-outreach
 
 https://media.libreplanet.org/u/libreplanet/m/who-cares-if-code-is-free-ux-and-free-software/ is about how free software developers should care about UX. Slides can be found at https://duffy.fedorapeople.org/presentations/libreplanet2018/HTML and the talk can be discussed at https://discourse.opensourcedesign.net/t/keynote-on-open-source-and-ux-at-ohio-linux-fest-sep-30/294
 
@@ -32,8 +32,6 @@ https://media.libreplanet.org/u/libreplanet/m/a-newcomer-s-perspective-on-patche
 
 https://media.libreplanet.org/u/libreplanet/m/a-wee-server-for-the-home/ is a deep dive on commands used for getting set up.
 
-https://media.libreplanet.org/u/libreplanet/m/introduction-to-latex/ in an intro, like it says.
-
 https://media.libreplanet.org/u/libreplanet/m/engaging-nonprofits-why-free-software-is-essential-to-the-social-good/
 
 https://media.libreplanet.org/u/libreplanet/m/free-software-for-nonprofit-fundraising-and-crowdfunding/
@@ -44,6 +42,12 @@ https://media.libreplanet.org/u/libreplanet/m/what-college-students-do-and-don-t
 
 https://media.libreplanet.org/u/libreplanet/m/how-geonode-spread-across-the-globe/
 
+https://media.libreplanet.org/u/libreplanet/m/how-to-stream-with-free-software/
+
+https://media.libreplanet.org/u/libreplanet/m/practical-verifiable-software-freedom-with-guixsd/ is basically a new Linux distribution.
+
+https://media.libreplanet.org/u/libreplanet/m/freedom-devices-and-health/ explained how given current laws, you can distribute source code but not class 3 medical devices.
+
 https://media.libreplanet.org/u/libreplanet/m/it-s-real-free-software-has-been-changing-mexico/ is by an OpenSUSE contributor.
 
 https://media.libreplanet.org/u/libreplanet/m/you-think-you-re-not-a-target-a-tale-of-three-developers/ is about reproducible builds.
@@ -52,18 +56,14 @@ https://media.libreplanet.org/u/libreplanet/m/free-software-as-a-catalyst-for-li
 
 https://media.libreplanet.org/u/libreplanet/m/defense-through-collaboration-the-use-of-free-software-in-preventing-proprietary-software-based-virus-attacks/ argues that free software helps keep us more secure.
 
-https://media.libreplanet.org/u/libreplanet/m/lightning-talks-session-1-gfdl-1-3/ was about the [Barre Open Systems Institute](http://www.bosivt.org).
+https://media.libreplanet.org/u/libreplanet/m/introduction-to-latex/ in an intro, like it says.
 
 https://media.libreplanet.org/u/libreplanet/m/device-and-personal-privacy-technology-roundup/ is by der.hans.
 
+https://media.libreplanet.org/u/libreplanet/m/lightning-talks-session-1-gfdl-1-3/ was about the [Barre Open Systems Institute](http://www.bosivt.org).
+
 ---
 
-https://media.libreplanet.org/u/libreplanet/m/freedom-devices-and-health/
-
 https://media.libreplanet.org/u/libreplanet/m/librecmc-the-libre-embedded-gnu-linux-distro/
-
-https://media.libreplanet.org/u/libreplanet/m/practical-verifiable-software-freedom-with-guixsd/
-
-https://media.libreplanet.org/u/libreplanet/m/how-to-stream-with-free-software/
 
 https://media.libreplanet.org/u/libreplanet/m/san-francisco-s-free-software-voting-system/
