--- a/conferences/libreplanet/2018.mdwn
+++ b/conferences/libreplanet/2018.mdwn
@@ -40,6 +40,8 @@ https://media.libreplanet.org/u/libreplanet/m/free-software-in-academia/
 
 https://media.libreplanet.org/u/libreplanet/m/what-college-students-do-and-don-t-know-about-free-software/
 
+https://media.libreplanet.org/u/libreplanet/m/san-francisco-s-free-software-voting-system/ was interesting and he mentioned they published some data.
+
 https://media.libreplanet.org/u/libreplanet/m/how-geonode-spread-across-the-globe/
 
 https://media.libreplanet.org/u/libreplanet/m/how-to-stream-with-free-software/
@@ -54,6 +56,8 @@ https://media.libreplanet.org/u/libreplanet/m/you-think-you-re-not-a-target-a-ta
 
 https://media.libreplanet.org/u/libreplanet/m/free-software-as-a-catalyst-for-liberation-social-justice-and-social-medicine/ is about GNU Health and health challenges around the world.
 
+https://media.libreplanet.org/u/libreplanet/m/librecmc-the-libre-embedded-gnu-linux-distro/ is about libreCMC.
+
 https://media.libreplanet.org/u/libreplanet/m/defense-through-collaboration-the-use-of-free-software-in-preventing-proprietary-software-based-virus-attacks/ argues that free software helps keep us more secure.
 
 https://media.libreplanet.org/u/libreplanet/m/introduction-to-latex/ in an intro, like it says.
@@ -61,9 +65,3 @@ https://media.libreplanet.org/u/libreplanet/m/introduction-to-latex/ in an intro
 https://media.libreplanet.org/u/libreplanet/m/device-and-personal-privacy-technology-roundup/ is by der.hans.
 
 https://media.libreplanet.org/u/libreplanet/m/lightning-talks-session-1-gfdl-1-3/ was about the [Barre Open Systems Institute](http://www.bosivt.org).
-
----
-
-https://media.libreplanet.org/u/libreplanet/m/librecmc-the-libre-embedded-gnu-linux-distro/
-
-https://media.libreplanet.org/u/libreplanet/m/san-francisco-s-free-software-voting-system/
